# vpn-automation

./: .gitignore  README.MD  create-user  free  new.user.template  restart  show  status  stop  wg0.conf
server/: privatkey  publickey
users/: wg0.conf
users/home/: home_private  home_public  wg0.conf
users/macbook_air/: macbook_air_private  macbook_air_public  wg0.conf
users/monitoring/: monitoring_private  monitoring_public  wg0.conf
utils/: main.py  pyproject.toml
utils/template/: new_user.mustache
